updated to use dotnet core and improve dot analysis